--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Baby Yoda</title>
+        <title>Soyoung Lester</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha256-2YQRJMXD7pIAPHiXr0s+vlRWA7GYJEK0ARns7k2sbHY=" crossorigin="anonymous" />
         <style>
             img.bio-image { float: left; padding: 0rem 3rem 0rem 1rem; height: 18.5rem; }
@@ -15,7 +15,7 @@
                     <img class="bio-image" src="https://i.ebayimg.com/images/g/IeIAAOSwJBdd8w4E/s-l500.png" alt="bio image">
 
                     <!-- Resume Title -->
-                    <h2>Baby Yoda</h2>
+                    <h2>Soyoung Lester</h2>
                     <h5>Web Developer</h5>
 
                     <!-- Contact Info -->
