changed background color

--- a/index.html
+++ b/index.html
@@ -4,23 +4,46 @@
         <title>Soyoung Lester</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha256-2YQRJMXD7pIAPHiXr0s+vlRWA7GYJEK0ARns7k2sbHY=" crossorigin="anonymous" />
         <style>
-            img.bio-image { float: left; padding: 0rem 3rem 0rem 1rem; height: 18.5rem; }
+            img.bio-image { 
+                float: left; 
+                padding: 0rem 3rem 0rem 1rem; 
+                height: 18.5rem; 
+                border-radius: 50% 
+                }
+            .main {
+                background: red;
+            }
+            .header {
+                color: white;
+            }
+
         </style>
+        <script>
+            function changeBackgroundColor() {
+                const letters = '0123456789ABCDEF';
+                let color = '#';
+                for (let i = 0; i < 6; i++) {
+                    color += letters[Math.floor(Math.random() * 16)];
+                }
+                document.body.style.background = color;
+            }
+        </script>
     </head>
     <body>
         <div class="container">
             <div class="row">
                 <div class="twelve column">
                     <!-- Bio Image -->
-                    <img class="bio-image" src="https://i.ebayimg.com/images/g/IeIAAOSwJBdd8w4E/s-l500.png" alt="bio image">
+                    <img class="bio-image" src="file:///Users/Soyoung/Desktop/Screen%20Shot%202019-09-19%20at%207.14.33%20PM.png" alt="bio image">
 
                     <!-- Resume Title -->
                     <h2>Soyoung Lester</h2>
-                    <h5>Web Developer</h5>
+                    <h5>UI/UX Designer</h5>
 
                     <!-- Contact Info -->
-                    <span><strong>Email:</strong> <a href="mailto:baby.yoda@meme.io">baby.yoda@meme.io</a></span><br>
-                    <span><strong>Phone:</strong> 208-829-2122</span>
+                    <span><strong>Email: </strong> <a href="mailto:baby.yoda@meme.io">baby.yoda@meme.io</a></span><br>
+                    <span><strong>Phone: </strong> 208-829-2122</span><br>
+                    <span><strong>GitHub: </strong><a href="https://github.com/soyounglester">soyounglester</a></span>
                 </div>
             </div>
 
@@ -52,7 +75,7 @@
 
                 </div>
             </div>
-
+            <button onclick="changeBackgroundColor()">Change Background color</button>
         </div>
     </body>
 </html>
